--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
             
           <ul class="auth-nav list">
             <li class="item">
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="link">
+                <svg class="link-svg">
+                  <use href="./img/sprite.svg#envelope">
+                  </use>
+                </svg>
+                info@devstudio.com</a>
             </li>
             <li class="item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="link">
+                <svg class="link-svg">
+                  <use href="./img/sprite.svg#smartphone">
+                  </use>
+                </svg>
+                +38 096 111 11 11</a>
             </li>
           </ul>
         </div>
@@ -72,7 +82,9 @@
             </li>
             <li class="item">
               <div class="item-image">
-                <img src="./img/clock.svg" alt="Часы">
+                <svg class="item-image-icon">
+                  <use href="./img/sprite.svg#clock"></use>
+                </svg>
               </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
@@ -81,7 +93,9 @@
             </li>
             <li class="item">
               <div class="item-image">
-                <img src="./img/diagram.svg" alt="Диаграмма">
+                <svg class="item-image-icon">
+                  <use href="./img/sprite.svg#diagram"></use>
+                </svg>
               </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
@@ -90,7 +104,9 @@
             </li>
             <li class="item">
               <div class="item-image">
-                <img src="./img/astronaut.svg" alt="Астронавт">
+                <svg class="item-image-icon">
+                  <use href="./img/sprite.svg#astronaut"></use>
+                </svg>
               </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
@@ -107,19 +123,13 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work list">
             <li class="item">
-              <a href="" class="link"><img src="./img/img_1.jpg" alt="Ноутбук">
-                <h3 class="title">Десктопные приложения</h3>
-              </a>
+              <h3 class="title">Десктопные приложения</h3>
             </li>
             <li class="item">
-              <a href="" class="link"><img src="./img/img2.jpg" alt="Мобильный">
-                <h3 class="title">Мобильные приложения</h3>
-              </a>
+              <h3 class="title">Мобильные приложения</h3>
             </li>
             <li class="item">
-              <a href="" class="link"><img src="./img/img3.jpg" alt="Софт">
-                <h3 class="title">Дизайнерские решения</h3>
-              </a>
+              <h3 class="title">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
@@ -137,22 +147,30 @@
               <ul  class="list social-networks">
                 <li class="icon">
                   <a href="https://instagram.com">
-                    <img src="./img/instagram.svg" alt="Инстаграм">
+                    <svg class="item-image-icon">
+                      <use href="./img/sprite.svg#instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
                   <a href="https://twitter.com">
-                    <img src="./img/twitter.svg" alt="Твиттер">
+                    <svg class="item-image-icon">
+                      <use href="./img/sprite.svg#twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
                   <a href="https://facebook.com">
-                    <img src="./img/facebook.svg" alt="Фейсбук">
+                    <svg class="item-image-icon">
+                      <use href="./img/sprite.svg#facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
                   <a href="https://linkedin.com">
-                    <img src="./img/linkedin.svg" alt="Линкедин">
+                    <svg class="item-image-icon">
+                      <use href="./img/sprite.svg#linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -248,22 +266,46 @@
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="list clients">
             <li class="clients-item">
-              <a href=""><img src="./img/logo1.svg" alt="логотип"></a>
+              <a href="">
+                <svg class="clients-item-icon" width="44" height="49">
+                  <use href="./img/sprite.svg#logo1"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <a href=""><img src="./img/logo2.svg" alt="логотип"></a>
+              <a href="">
+                <svg class="clients-item-icon" width="40" height="52">
+                  <use href="./img/sprite.svg#logo2"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <a href=""><img src="./img/logo3.svg" alt="логотип"></a>
+              <a href="">
+                <svg class="clients-item-icon"  width="41" height="42">
+                  <use href="./img/sprite.svg#logo3"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <a href=""><img src="./img/logo4.svg" alt="логотип"></a>
+              <a href="">
+                <svg class="clients-item-icon"  width="80" height="42">
+                  <use href="./img/sprite.svg#logo4"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <a href=""><img src="./img/logo5.svg" alt="логотип"></a>
+              <a href="">
+                <svg class="clients-item-icon"  width="59" height="47">
+                  <use href="./img/sprite.svg#logo5"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <a href=""><img src="./img/logo6.svg" alt="логотип"></a>
+              <a href="">
+                <svg class="clients-item-icon"  width="88" height="45">
+                  <use href="./img/sprite.svg#logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -294,22 +336,38 @@
               <ul class="list social-networks">
                 <li>
                   <a href="https://instagram.com">
-                    <img src="./img/instagram.svg" alt="Инстаграм">
+                    <button class="social-networks-button">
+                      <svg class="button-icon">
+                        <use href="./img/sprite.svg#instagram"></use>
+                      </svg>
+                    </button>
                   </a>
                 </li>
                 <li>
                   <a href="https://twitter.com">
-                    <img src="./img/twitter.svg" alt="Твиттер">
+                    <button class="social-networks-button">
+                      <svg class="button-icon">
+                        <use href="./img/sprite.svg#twitter"></use>
+                      </svg>
+                    </button>
                   </a>
                 </li>
                 <li>
                   <a href="https://facebook.com">
-                    <img src="./img/facebook.svg" alt="Фейсбук">
+                    <button class="social-networks-button">
+                      <svg class="button-icon">
+                        <use href="./img/sprite.svg#facebook"></use>
+                      </svg>
+                    </button>
                   </a>
                 </li>
                 <li>
                   <a href="https://linkedin.com">
-                    <img src="./img/linkedin.svg" alt="Линкедин">
+                    <button class="social-networks-button">
+                      <svg class="button-icon">
+                        <use href="./img/sprite.svg#linkedin"></use>
+                      </svg>
+                    </button>
                   </a>
                 </li>
               </ul>
