--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,20 @@
               
             <ul class="auth-nav list">
               <li class="item">
-                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="link">
+                  <svg class="link-svg">
+                    <use href="./img/sprite.svg#envelope">
+                    </use>
+                  </svg>
+                  info@devstudio.com</a>
               </li>
               <li class="item">
-                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="link">
+                  <svg class="link-svg">
+                    <use href="./img/sprite.svg#smartphone">
+                    </use>
+                  </svg>
+                  +38 096 111 11 11</a>
               </li>
             </ul>
           </div>
@@ -165,19 +175,39 @@
               <ul class="list social-networks">
                 <li>
                   <a href="https://instagram.com">
-                    <img src="./img/instagram.svg" alt="Инстаграм"></a>
+                    <button class="social-networks-button">
+                      <svg class="button-icon">
+                        <use href="./img/sprite.svg#instagram"></use>
+                      </svg>
+                    </button>
+                  </a>
                 </li>
                 <li>
                   <a href="https://twitter.com">
-                    <img src="./img/twitter.svg" alt="Твиттер"></a>
+                    <button class="social-networks-button">
+                      <svg class="button-icon">
+                        <use href="./img/sprite.svg#twitter"></use>
+                      </svg>
+                    </button>
+                  </a>
                 </li>
                 <li>
                   <a href="https://facebook.com">
-                    <img src="./img/facebook.svg" alt="Фейсбук"></a>
+                    <button class="social-networks-button">
+                      <svg class="button-icon">
+                        <use href="./img/sprite.svg#facebook"></use>
+                      </svg>
+                    </button>
+                  </a>
                 </li>
                 <li>
                   <a href="https://linkedin.com">
-                    <img src="./img/linkedin.svg" alt="Линкедин"></a>
+                    <button class="social-networks-button">
+                      <svg class="button-icon">
+                        <use href="./img/sprite.svg#linkedin"></use>
+                      </svg>
+                    </button>
+                  </a>
                 </li>
               </ul>
             </div>
