--- a/portfolio.html
+++ b/portfolio.html
@@ -172,41 +172,33 @@
             <div class="social-part">
               <h2 class="invisible-title">Cоциальные сети</h2>
               <b class="txt">Присоединяйтесь</b>
-              <ul class="list social-networks">
+              <ul class="list footer-social-networks">
                 <li>
-                  <a href="https://instagram.com">
-                    <button class="social-networks-button">
-                      <svg class="button-icon">
-                        <use href="./img/sprite.svg#instagram"></use>
-                      </svg>
-                    </button>
+                  <a class="social-networks-button" href="https://instagram.com">
+                    <svg class="button-icon">
+                      <use href="./img/sprite.svg#instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com">
-                    <button class="social-networks-button">
-                      <svg class="button-icon">
-                        <use href="./img/sprite.svg#twitter"></use>
-                      </svg>
-                    </button>
+                  <a class="social-networks-button" href="https://twitter.com">
+                    <svg class="button-icon">
+                      <use href="./img/sprite.svg#twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://facebook.com">
-                    <button class="social-networks-button">
-                      <svg class="button-icon">
-                        <use href="./img/sprite.svg#facebook"></use>
-                      </svg>
-                    </button>
+                  <a class="social-networks-button" href="https://facebook.com">
+                    <svg class="button-icon">
+                      <use href="./img/sprite.svg#facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com">
-                    <button class="social-networks-button">
-                      <svg class="button-icon">
-                        <use href="./img/sprite.svg#linkedin"></use>
-                      </svg>
-                    </button>
+                  <a class="social-networks-button" href="https://linkedin.com">
+                    <svg class="button-icon">
+                      <use href="./img/sprite.svg#linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -214,7 +206,14 @@
           </section>
           <div class="mailing">
             <b class="txt">Подпишитесь на рассылку</b>
-            <button type="button" class="btn .title">Подписаться</button>
+            <button class="btn title">
+              <div class="btn-align">
+                Подписаться 
+                <svg class="mailing-btn-svg" width="24" height="24">
+                  <use href="./img/sprite.svg#icon_send"></use>
+                </svg>
+              </div>
+            </button>
           </div>
         </div>
         <p class="copy container">2020 | Developed by GoIT Students </p>
