--- a/index.html
+++ b/index.html
@@ -146,29 +146,30 @@
               <p class="job">Product Designer</p>
               <ul  class="list social-networks">
                 <li class="icon">
-                  <a href="https://instagram.com">
-                    <svg class="item-image-icon">
-                      <use href="./img/sprite.svg#instagram"></use>
+                  <a class="icon-meil" href="https://instagram.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#instagram">
+                      </use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://twitter.com">
-                    <svg class="item-image-icon">
+                  <a class="icon-meil" href="https://twitter.com">
+                    <svg class="team-svg-icon">
                       <use href="./img/sprite.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://facebook.com">
-                    <svg class="item-image-icon">
+                  <a class="icon-meil" href="https://facebook.com">
+                    <svg class="team-svg-icon">
                       <use href="./img/sprite.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://linkedin.com">
-                    <svg class="item-image-icon">
+                  <a class="icon-meil" href="https://linkedin.com">
+                    <svg class="team-svg-icon">
                       <use href="./img/sprite.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -179,25 +180,34 @@
               <img src="./img/Marta.jpg" alt="Марта">
               <h3 class="team-name">Ольга Иванова</h3>
               <p class="job">Frontend Developer</p>
-              <ul class="list social-networks">
+              <ul  class="list social-networks">
                 <li class="icon">
-                  <a href="https://instagram.com">
-                    <img src="./img/instagram.svg" alt="Инстаграм">
+                  <a class="icon-meil" href="https://instagram.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#instagram">
+                      </use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://twitter.com">
-                    <img src="./img/twitter.svg" alt="Твиттер">
+                  <a class="icon-meil" href="https://twitter.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://facebook.com">
-                    <img src="./img/facebook.svg" alt="Фейсбук">
+                  <a class="icon-meil" href="https://facebook.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://linkedin.com">
-                    <img src="./img/linkedin.svg" alt="Линкедин">
+                  <a class="icon-meil" href="https://linkedin.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -206,25 +216,34 @@
               <img src="./img/Robert.jpg" alt="Роберт">
               <h3 class="team-name">Андрей Шевченко</h3>
               <p class="job">Marketing</p>
-              <ul class="list social-networks">
+              <ul  class="list social-networks">
                 <li class="icon">
-                  <a href="https://instagram.com">
-                    <img src="./img/instagram.svg" alt="Инстаграм">
+                  <a class="icon-meil" href="https://instagram.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#instagram">
+                      </use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://twitter.com">
-                    <img src="./img/twitter.svg" alt="Твиттер">
+                  <a class="icon-meil" href="https://twitter.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://facebook.com">
-                    <img src="./img/facebook.svg" alt="Фейсбук">
+                  <a class="icon-meil" href="https://facebook.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://linkedin.com">
-                    <img src="./img/linkedin.svg" alt="Линкедин">
+                  <a class="icon-meil" href="https://linkedin.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -233,25 +252,34 @@
               <img src="./img/Martin.jpg" alt="Мартин">
               <h3 class="team-name">Иван Николаев</h3>
               <p class="job">UI Designer</p>
-              <ul class="list social-networks">
+              <ul  class="list social-networks">
                 <li class="icon">
-                  <a href="https://instagram.com">
-                    <img src="./img/instagram.svg" alt="Инстаграм">
+                  <a class="icon-meil" href="https://instagram.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#instagram">
+                      </use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://twitter.com">
-                    <img src="./img/twitter.svg" alt="Твиттер">
+                  <a class="icon-meil" href="https://twitter.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://facebook.com">
-                    <img src="./img/facebook.svg" alt="Фейсбук">
+                  <a class="icon-meil" href="https://facebook.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="icon">
-                  <a href="https://linkedin.com">
-                    <img src="./img/linkedin.svg" alt="Линкедин">
+                  <a class="icon-meil" href="https://linkedin.com">
+                    <svg class="team-svg-icon">
+                      <use href="./img/sprite.svg#linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -333,41 +361,33 @@
             <div class="social-part">
               <h2 class="invisible-title">Cоциальные сети</h2>
               <b class="txt">Присоединяйтесь</b>
-              <ul class="list social-networks">
+              <ul class="list footer-social-networks">
                 <li>
-                  <a href="https://instagram.com">
-                    <button class="social-networks-button">
-                      <svg class="button-icon">
-                        <use href="./img/sprite.svg#instagram"></use>
-                      </svg>
-                    </button>
+                  <a class="social-networks-button" href="https://instagram.com">
+                    <svg class="button-icon">
+                      <use href="./img/sprite.svg#instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com">
-                    <button class="social-networks-button">
-                      <svg class="button-icon">
-                        <use href="./img/sprite.svg#twitter"></use>
-                      </svg>
-                    </button>
+                  <a class="social-networks-button" href="https://twitter.com">
+                    <svg class="button-icon">
+                      <use href="./img/sprite.svg#twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://facebook.com">
-                    <button class="social-networks-button">
-                      <svg class="button-icon">
-                        <use href="./img/sprite.svg#facebook"></use>
-                      </svg>
-                    </button>
+                  <a class="social-networks-button" href="https://facebook.com">
+                    <svg class="button-icon">
+                      <use href="./img/sprite.svg#facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com">
-                    <button class="social-networks-button">
-                      <svg class="button-icon">
-                        <use href="./img/sprite.svg#linkedin"></use>
-                      </svg>
-                    </button>
+                  <a class="social-networks-button" href="https://linkedin.com">
+                    <svg class="button-icon">
+                      <use href="./img/sprite.svg#linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -375,7 +395,14 @@
           </section>
           <div class="mailing">
             <b class="txt">Подпишитесь на рассылку</b>
-            <button class="btn title">Подписаться</button>
+            <button class="btn title">
+              <div class="btn-align">
+                Подписаться 
+                <svg class="mailing-btn-svg" width="24" height="24">
+                  <use href="./img/sprite.svg#icon_send"></use>
+                </svg>
+              </div>
+            </button>
           </div>
         </div>
         <p class="copy container">2020 | Developed by GoIT Students </p>
