--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
                   <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-6.jpg" alt="">
+                  <a class="works-link" href=""><img src="./img/img3.jpg" alt="">
                     <div class="work-info">
                       <h3 class="title">Inspiration has no Borders</h3>
                       <p class="sub">Веб-сай</p>
@@ -138,7 +138,7 @@
                   <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-9.jpg" alt="">
+                  <a class="works-link" href=""><img src="./img/img1.jpg" alt="">
                     <div class="work-info">
                       <h3 class="title">Growing Business</h3>
                       <p class="sub">Приложение</p>
