--- a/portfolio.html
+++ b/portfolio.html
@@ -66,86 +66,113 @@
               <h2 class="invisible-title">Работа</h2>
               <ul class="list works">
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-1.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/work-img-1.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3  class="title">Технокряк</h3>
                       <p class="sub">Веб-сайт</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-2.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/work-img-2.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3 class="title">Постер New Orlean vs Golden Star</h3>
                       <p class="sub">Дизайн</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-3.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/work-img-3.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3 class="title">Ресторан Seafood</h3>
                       <p class="sub">Приложение</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-4.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/work-img-4.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3 class="title">Проект Prim</h3>
                       <p class="sub">Маркетинг</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-5.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/work-img-5.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3 class="title">Проект Boxe</h3>
                       <p class="sub">Приложение</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/img3.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/img3.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3 class="title">Inspiration has no Borders</h3>
                       <p class="sub">Веб-сай</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-7.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/work-img-7.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3 class="title">Издание Limited Edition</h3>
                       <p class="sub">Дизайн</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/work-img-8.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/work-img-8.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3 class="title">Проект LAB</h3>
                       <p class="sub">Маркетинг</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                 </li>
                 <li class="works-items">
-                  <a class="works-link" href=""><img src="./img/img1.jpg" alt="">
+                  <a class="works-link" href="">
+                    <div class="works-link-activ">
+                      <img class="works-link-img" src="./img/img1.jpg" alt="">
+                      <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="work-info">
                       <h3 class="title">Growing Business</h3>
                       <p class="sub">Приложение</p>
                     </div>
                   </a>
-                  <!-- <p class="txt">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-                </li> -->
+                </li>
               </ul>
             </div>
           </section>
